Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
     />
 
     <!-- Stylesheet Link -->
-    <!--
     <link
       id="theme"
-      href="./Styles/lightDesign.css"
+      href="styles/lightDesign.css"
       type="text/css"
       rel="stylesheet"
     />
-    -->
 
     <!-- Bootstrap Link-->
     <link
@@ -71,7 +69,7 @@
               <li>
                 <button id="menuButton" type="button">
                   <img
-                    src="Images/Icons/hamburgerMenu.svg"
+                    src="assets/images/Icons/hamburgerMenu.svg"
                     title="Menu"
                     alt="Menu Button"
                   />
@@ -99,7 +97,7 @@
                 <button id="themeButton" type="button">
                   <img
                     id="themeChangerButtonIcon"
-                    src="Images/Icons/moon.svg"
+                    src="assets/images/Icons/moon.svg"
                     title="Change Theme"
                     alt="Theme changing button"
                   />
@@ -122,7 +120,7 @@
             <div class="col">
               <img
                 class="mainPictures"
-                src="Images/Pictures/ME.png"
+                src="assets/images/Pictures/ME.png"
                 title="Hello! This is me"
                 alt="A picture of Jadnell Reyes was supposed to appear here..."
               />
@@ -314,7 +312,7 @@
                       Resumé.pdf
                       <img
                         id="resumeDownload"
-                        src="Images/Icons/downloadArrow.svg"
+                        src="assets/images/Icons/downloadArrow.svg"
                         title="Download Arrow"
                         width="20rem"
                         height="20rem"
@@ -340,7 +338,7 @@
                     onclick="window.location.href='https://html.com/#What_is_HTML';"
                   >
                     <img
-                      src="Images/Tech Stack/html.svg"
+                      src="assets/images/Tech Stack/html.svg"
                       title="HTML Logo"
                       width="25rem"
                       height="25rem"
@@ -348,7 +346,7 @@
                     />
                     HTML
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -364,7 +362,7 @@
                     onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
                   >
                     <img
-                      src="Images/Tech Stack/css.svg"
+                      src="assets/images/Tech Stack/css.svg"
                       title="CSS Logo"
                       width="25rem"
                       height="25rem"
@@ -372,7 +370,7 @@
                     />
                     CSS
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -387,7 +385,7 @@
                     onclick="window.location.href='https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript';"
                   >
                     <img
-                      src="Images/Tech Stack/javascript.svg"
+                      src="assets/images/Tech Stack/javascript.svg"
                       title="JavaScript Logo"
                       width="20rem"
                       height="20rem"
@@ -395,7 +393,7 @@
                     />
                     JavaScript
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -410,7 +408,7 @@
                     onclick="window.location.href='https://www.w3schools.com/cpp/cpp_intro.asp';"
                   >
                     <img
-                      src="Images/Tech Stack/c++.svg"
+                      src="assets/images/Tech Stack/c++.svg"
                       title="C++ Logo"
                       width="25rem"
                       height="25rem"
@@ -418,7 +416,7 @@
                     />
                     C++
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -433,7 +431,7 @@
                     onclick="window.location.href='https://dart.dev/overview';"
                   >
                     <img
-                      src="Images/Tech Stack/dart.svg"
+                      src="assets/images/Tech Stack/dart.svg"
                       title="Dart Logo"
                       width="20rem"
                       height="20rem"
@@ -441,7 +439,7 @@
                     />
                     Dart
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -457,7 +455,7 @@
                     onclick="window.location.href='https://docs.python.org/3/faq/general.html#what-is-python';"
                   >
                     <img
-                      src="Images/Tech Stack/python.svg"
+                      src="assets/images/Tech Stack/python.svg"
                       title="Python Logo"
                       width="25rem"
                       height="25rem"
@@ -465,7 +463,7 @@
                     />
                     Python
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -480,7 +478,7 @@
                     onclick="window.location.href='https://www.mathworks.com/products/matlab.html';"
                   >
                     <img
-                      src="Images/Tech Stack/matlab.svg"
+                      src="assets/images/Tech Stack/matlab.svg"
                       title="MATLAB Logo"
                       width="25rem"
                       height="25rem"
@@ -488,7 +486,7 @@
                     />
                     MATLAB
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -503,7 +501,7 @@
                     onclick="window.location.href='https://aws.amazon.com/what-is/sql/';"
                   >
                     <img
-                      src="Images/Tech Stack/sql.svg"
+                      src="assets/images/Tech Stack/sql.svg"
                       title="SQL Logo"
                       width="25rem"
                       height="25rem"
@@ -511,7 +509,7 @@
                     />
                     SQL
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -531,7 +529,7 @@
                     onclick="window.location.href='https://code.visualstudio.com/docs/supporting/faq';"
                   >
                     <img
-                      src="Images/Tech Stack/visualStudioCode.svg"
+                      src="assets/images/Tech Stack/visualStudioCode.svg"
                       title="Visual Studio Code Logo"
                       width="20rem"
                       height="20rem"
@@ -539,7 +537,7 @@
                     />
                     Visual Studio Code
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -554,7 +552,7 @@
                     onclick="window.location.href='https://docs.github.com/en/get-started/quickstart/hello-world';"
                   >
                     <img
-                      src="Images/Tech Stack/githubSocialMedia.svg"
+                      src="assets/images/Tech Stack/githubSocialMedia.svg"
                       title="GitHub Logo"
                       width="20rem"
                       height="20rem"
@@ -562,7 +560,7 @@
                     />
                     GitHub
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -577,7 +575,7 @@
                     onclick="window.location.href='https://developer.android.com/studio/intro';"
                   >
                     <img
-                      src="Images/Tech Stack/androidStudio.svg"
+                      src="assets/images/Tech Stack/androidStudio.svg"
                       title="Android Studio Logo"
                       width="25rem"
                       height="25rem"
@@ -585,7 +583,7 @@
                     />
                     Android Studio
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -600,7 +598,7 @@
                     onclick="window.location.href='https://visualstudio.microsoft.com/#vs-section';"
                   >
                     <img
-                      src="Images/Tech Stack/visualStudio.svg"
+                      src="assets/images/Tech Stack/visualStudio.svg"
                       title="Visual Studio Logo"
                       width="20rem"
                       height="20rem"
@@ -608,7 +606,7 @@
                     />
                     Visual Studio
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -624,7 +622,7 @@
                     onclick="window.location.href='https://www.arduino.cc/en/Guide/Introduction';"
                   >
                     <img
-                      src="Images/Tech Stack/arduinoTechStack.svg"
+                      src="assets/images/Tech Stack/arduinoTechStack.svg"
                       title="Arduino Logo"
                       width="25rem"
                       height="25rem"
@@ -632,7 +630,7 @@
                     />
                     Arduino
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -647,7 +645,7 @@
                     onclick="window.location.href='https://jupyter-notebook.readthedocs.io/en/stable/';"
                   >
                     <img
-                      src="Images/Tech Stack/Jupyter.svg"
+                      src="assets/images/Tech Stack/Jupyter.svg"
                       title="Jupyter Notebook Logo"
                       width="25rem"
                       height="25rem"
@@ -655,7 +653,7 @@
                     />
                     Jupyter Notebook
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -670,7 +668,7 @@
                     onclick="window.location.href='https://www.raspberrypi.com/for-home/';"
                   >
                     <img
-                      src="Images/Tech Stack/raspberryPi.svg"
+                      src="assets/images/Tech Stack/raspberryPi.svg"
                       title="Raspberry Pi Logo"
                       width="20rem"
                       height="20rem"
@@ -678,7 +676,7 @@
                     />
                     Raspberry Pi
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -693,7 +691,7 @@
                     onclick="window.location.href='https://www.virtualbox.org/wiki/VirtualBox';"
                   >
                     <img
-                      src="Images/Tech Stack/virtualbox.svg"
+                      src="assets/images/Tech Stack/virtualbox.svg"
                       title="VirtualBox Logo"
                       width="25rem"
                       height="25rem"
@@ -701,7 +699,7 @@
                     />
                     VirtualBox
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -721,7 +719,7 @@
                     onclick="window.location.href='https://www.w3schools.com/whatis/whatis_bootstrap.asp';"
                   >
                     <img
-                      src="Images/Tech Stack/bootstrap.svg"
+                      src="assets/images/Tech Stack/bootstrap.svg"
                       title="Bootstrap Logo"
                       width="25rem"
                       height="25rem"
@@ -729,7 +727,7 @@
                     />
                     Bootstrap
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -744,7 +742,7 @@
                     onclick="window.location.href='https://www.djangoproject.com/';"
                   >
                     <img
-                      src="Images/Tech Stack/django.svg"
+                      src="assets/images/Tech Stack/django.svg"
                       title="Django Logo"
                       width="17.5rem"
                       height="17.5rem"
@@ -752,7 +750,7 @@
                     />
                     Django
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -767,7 +765,7 @@
                     onclick="window.location.href='https://flutter.dev/';"
                   >
                     <img
-                      src="Images/Tech Stack/flutter.svg"
+                      src="assets/images/Tech Stack/flutter.svg"
                       title="Flutter Logo"
                       width="20rem"
                       height="20rem"
@@ -775,7 +773,7 @@
                     />
                     Flutter
                     <img
-                      src="Images/Icons/info.svg"
+                      src="assets/images/Icons/info.svg"
                       title="Info"
                       width="25rem"
                       height="25rem"
@@ -813,7 +811,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/DEPO.png"
+                src="assets/images/Project Pictures/DEPO.png"
                 title="Depo Web Application Fines Tab."
                 alt="A picture of the DEPO Web Application Fines tab was supposed to appear here..."
               />
@@ -869,7 +867,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/DEPO.png"
+                src="assets/images/Project Pictures/DEPO.png"
                 title="My Portfolio (This Website)."
                 alt="A picture of My Portfolio was supposed to appear here..."
               />
@@ -882,7 +880,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/HQG.png"
+                src="assets/images/Project Pictures/HQG.png"
                 title="Haresh Quiz Game Main Screen."
                 alt="A picture of Haresh Quiz Game was supposed to appear here..."
               />
@@ -936,7 +934,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/DCM.png"
+                src="assets/images/Project Pictures/DCM.png"
                 title="DC Motor Circuit with two Inputs."
                 alt="A picture of a DC Motor circuit was supposed to appear here..."
               />
@@ -949,7 +947,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/STM.png"
+                src="assets/images/Project Pictures/STM.png"
                 title="28byj-48 Step Motor and Arduino Connector."
                 alt="A picture of a 28byj-48 Step Motor and an Arduino Connector was supposed to appear here..."
               />
@@ -1090,7 +1088,7 @@
                   onclick="window.location.href='https://www.instagram.com/j_dnll/';"
                 >
                   <img
-                    src="Images/Social Media/instagram.svg"
+                    src="assets/images/Social Media/instagram.svg"
                     title="Instagram"
                     width="25px"
                     height="25px"
@@ -1105,7 +1103,7 @@
                   onclick="window.location.href='https://www.x.com/jadnellReyes';"
                 >
                   <img
-                    src="Images/Social Media/x.svg"
+                    src="assets/images/Social Media/x.svg"
                     title="X"
                     width="20px"
                     height="20px"
@@ -1120,7 +1118,7 @@
                   onclick="window.location.href='https://github.com/jadnell555';"
                 >
                   <img
-                    src="Images/Tech Stack/githubSocialMedia.svg"
+                    src="assets/images/Tech Stack/githubSocialMedia.svg"
                     title="GitHub"
                     width="30px"
                     height="30px"
@@ -1135,7 +1133,7 @@
                   onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
                 >
                   <img
-                    src="Images/Social Media/linkedin.svg"
+                    src="assets/images/Social Media/linkedin.svg"
                     title="LinkedIn"
                     width="25px"
                     height="25px"
@@ -1162,10 +1160,10 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/themeChangerButton.js"></script>
-    <script src="scripts/menuButton.js"></script>
-    <script src="scripts/animationsOnScroll.js"></script>
-    <script src="scripts/contactForm.js"></script>
+    <script src="scripts/modules/themeChangerButton.js"></script>
+    <script src="scripts/modules/menuButton.js"></script>
+    <script src="scripts/modules/animationsOnScroll.js"></script>
+    <script src="scripts/modules/contactForm.js"></script>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
 </html>
