Making the educationBlocks mobile-first

--- a/index.html
+++ b/index.html
@@ -146,51 +146,56 @@
           </p>
         </div>
 
-        <h5 class="blockTitles">Education:</h5>
+        <h2 class="blockTitles">Education:</h2>
         <div class="smallBlock">
-          <div class="educationDates">
-            <b
-              >01/18 - 7/23 <br />
-              Hato Rey, PR
-            </b>
-          </div>
+          <div class="educationBlock">
+            <div class="educationDates">
+              <b
+                >01/18 - 7/23
+                <br />
+                Hato Rey, PR
+              </b>
+            </div>
 
-          <div>
-            <b>Bachelor's Degree of Science in Computer Engineering</b>
-            <br />
-            <i>Polytechnic University of Puerto Rico</i> <br />
-            <ul class="educationLists">
-              <li>GPA: 3.3</li>
+            <div class="credentials">
+              <b>Bachelor's Degree of Science in Computer Engineering</b>
+              <br />
+              <i>Polytechnic University of Puerto Rico</i> <br />
+            </div>
+          </div>
+          <ul class="educationLists">
+            <li>GPA: 3.3</li>
 
-              <li><i> Cum Laude </i></li>
-            </ul>
-          </div>
-        </div>
-        <br /><br />
-        <div class="smallBlock">
-          <div class="educationDates">
-            <b
-              >08/06 - 6/18 <br />
-              San Juan, PR
-            </b>
-          </div>
-
-          <div>
-            <b>High School Diploma</b>
-            <br />
-            <i>Colegio Nuestra Se&ntilde;ora de la Altagracia</i>
-            <br />
-            <ul class="educationLists">
-              <li>GPA: 4.0</li>
-              <li>Valedictorian</li>
-            </ul>
-          </div>
+            <li><i> Cum Laude </i></li>
+          </ul>
         </div>
 
-        <h5 class="blockTitles">Toolkit:</h5>
+        <div class="smallBlock">
+          <div class="educationBlock">
+            <div class="educationDates">
+              <b
+                >08/06 - 6/18 <br />
+                San Juan, PR
+              </b>
+            </div>
+
+            <div class="credentials">
+              <b>High School Diploma</b>
+              <br />
+              <i>Colegio Nuestra Se&ntilde;ora de la Altagracia</i>
+              <br />
+            </div>
+          </div>
+          <ul class="educationLists">
+            <li>GPA: 4.0</li>
+            <li>Valedictorian</li>
+          </ul>
+        </div>
+
+        <h2 class="blockTitles">Toolkit:</h2>
 
         <div class="smallBlock">
-          <h6 class="smallBlockTitles">Programming Languages:</h6>
+          <h3 class="inBlockTitles">Programming Languages:</h3>
 
           <button
             class="secondaryButtons"
@@ -369,7 +374,7 @@
           </button>
         </div>
         <div class="smallBlock">
-          <h6 class="smallBlockTitles">Software & Hardware:</h6>
+          <h3 class="inBlockTitles">Software & Hardware:</h3>
 
           <button
             class="secondaryButtons"
@@ -548,7 +553,7 @@
           </button>
         </div>
         <div class="smallBlock">
-          <h6 class="smallBlockTitles">Frameworks:</h6>
+          <h3 class="inBlockTitles">Frameworks:</h3>
 
           <button
             class="secondaryButtons"
@@ -811,7 +816,7 @@
         <br />
 
         <div class="smallBlock">
-          <h3 class="blockTitles">Message Me:</h3>
+          <h2 class="blockTitles">Message Me:</h2>
 
           <form
             action="https://send.pageclip.co/CAH0P5X4x3AsDEPAqnhl4MqM62FY8Ndd/contactForm"
