Improvements on mobile-first design

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <ul id="navBarItems" class="hide">
       <li class="navBarItem">
-        <a class="navBarTitles" href="#expertiseSection"> EXPERTISE </a>
+        <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
       </li>
       <li class="navBarItem">
         <a class="navBarTitles" href="#projectsSection"> PROJECTS </a>
@@ -119,7 +119,7 @@
         <div class="primaryButtons">
           <button
             title="Learn More About Me"
-            onclick="window.location.href='#expertiseSection';"
+            onclick="window.location.href='#aboutMeSection';"
           >
             Learn More:
           </button>
@@ -130,17 +130,17 @@
       <br />
     </section>
 
-    <!-- EXPERTISE SECTION -->
-    <section id="expertiseSection">
+    <!-- ABOUT ME SECTION -->
+    <section id="aboutMeSection">
       <div class="wrapper animatedSection">
         <br />
 
-        <div class="HEADINGS"><h1>EXPERTISE</h1></div>
+        <div class="HEADINGS"><h1>ABOUT ME</h1></div>
         <div class="headingsDescriptions">
           <p>
             Here you can learn about my educational background, and my
-            familiarity with various technologies, hardware & languages.
-            Additionally, you'll find a link to my resum&eacute;.
+            familiarity with various technologies, hardware & programming
+            languages.
           </p>
         </div>
 
@@ -190,7 +190,7 @@
           </ul>
         </div>
 
-        <h2 class="blockTitles">Toolkit:</h2>
+        <h2 class="blockTitles">Tech Stack:</h2>
 
         <div class="smallBlock">
           <h3 class="inBlockTitles">Programming Languages:</h3>
