Minor fix with picture centering

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- Intro and Image -->
 
         <!--Image of me-->
-        <div class="wrapper">
+        <div class="pictureWrapper">
           <img
             id="mainPicture"
             src="assets/images/Pictures/ME.png"
@@ -636,7 +636,7 @@
           </p>
         </div>
         <div class="projectContainer">
-          <div class="wrapper">
+          <div class="pictureWrapper">
             <img
               class="projectPictures"
               src="assets/images/Project Pictures/DEPO.png"
