Minor bug fixes for mobile-first design

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
         </div>
 
         <div class="projectContainer">
-          <div class="wrapper">
+          <div class="pictureWrapper">
             <img
               class="projectPictures"
               src="assets/images/Project Pictures/"
@@ -699,7 +699,7 @@
         </div>
 
         <div class="projectContainer">
-          <div class="wrapper">
+          <div class="pictureWrapper">
             <img
               class="projectPictures"
               src="assets/images/Project Pictures/HQG.png"
@@ -730,7 +730,7 @@
         </div>
 
         <div class="projectContainer">
-          <div class="wrapper">
+          <div class="pictureWrapper">
             <img
               class="projectPictures"
               src="assets/images/Project Pictures/DCM.png"
@@ -759,7 +759,7 @@
         </div>
 
         <div class="projectContainer">
-          <div class="wrapper">
+          <div class="pictureWrapper">
             <img
               class="projectPictures"
               src="assets/images/Project Pictures/STM.png"
