Updated "My Portfolio v0.8" project picture and minor design changes

--- a/index.html
+++ b/index.html
@@ -672,12 +672,12 @@
           <div class="pictureWrapper">
             <img
               class="projectPictures"
-              src="assets/images/Project Pictures/"
+              src="assets/images/Project Pictures/MP.png"
               title="My Portfolio (This Website)."
               alt="A picture of My Portfolio was supposed to appear here..."
             />
           </div>
-          <h2 class="projectTitle">My Portfolio:</h2>
+          <h2 class="projectTitle">My Portfolio v0.8:</h2>
 
           <div class="smallBlock">
             <h5>Overview:</h5>
