Minor design changes and bug fixes

--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
 
     <!-- LANDING SECTION -->
     <section id="landingSection">
-      <br />
-      <br />
       <div class="wrapper animatedSection">
         <!-- Intro and Image -->
 
@@ -125,16 +123,11 @@
           </button>
         </div>
       </div>
-      <br />
-      <br />
-      <br />
     </section>
 
     <!-- ABOUT ME SECTION -->
     <section id="aboutMeSection">
       <div class="wrapper animatedSection">
-        <br />
-
         <div class="HEADINGS"><h1>ABOUT ME</h1></div>
         <div class="headingsDescriptions">
           <p>
@@ -193,8 +186,8 @@
         <h2 class="blockTitles">Tech Stack:</h2>
 
         <div class="smallBlock">
-          <h3 class="inBlockTitles">Programming Languages:</h3>
-
+          <h3 class="inBlockTitles">Software Development:</h3>
+          <!--
           <button
             class="secondaryButtons"
             title="What is HTML?"
@@ -370,10 +363,12 @@
               alt="More Info Button"
             />
           </button>
+          -->
         </div>
-        <div class="smallBlock">
-          <h3 class="inBlockTitles">Software & Hardware:</h3>
 
+        <div class="smallBlock">
+          <h3 class="inBlockTitles">Data Analysis:</h3>
+          <!--
           <button
             class="secondaryButtons"
             title="What is Visual Studio Code?"
@@ -549,10 +544,11 @@
               alt="More Info Button"
             />
           </button>
+          -->
         </div>
         <div class="smallBlock">
-          <h3 class="inBlockTitles">Frameworks:</h3>
-
+          <h3 class="inBlockTitles">Hardware:</h3>
+          <!--
           <button
             class="secondaryButtons"
             title="What is Bootstrap?"
@@ -618,16 +614,17 @@
               alt="More Info Button"
             />
           </button>
+          -->
         </div>
 
-        <br />
+        <div class="smallBlock">
+          <h3 class="inBlockTitles">Project Management & Other Tools:</h3>
+        </div>
       </div>
     </section>
     <!-- PROJECTS SECTION -->
     <section id="projectsSection">
       <div class="wrapper animatedSection">
-        <br />
-
         <div class="HEADINGS"><h1>PROJECTS</h1></div>
         <div class="headingsDescriptions">
           <p>
@@ -789,15 +786,10 @@
           </div>
         </div>
       </div>
-      <br />
     </section>
     <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection">
       <div class="wrapper animatedSection">
-        <br />
-        <br />
-        <br />
-
         <div class="HEADINGS"><h1>CONTACT</h1></div>
         <div class="headingsDescriptions">
           <p>
