Minor design changes.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
         <div class="headingsDescriptions">
           <p>
             Here you can learn about my educational background, and my
-            familiarity with various technologies, hardware & programming
-            languages.
+            familiarity with various tools and software.
           </p>
         </div>
 
@@ -628,8 +627,8 @@
         <div class="HEADINGS"><h1>PROJECTS</h1></div>
         <div class="headingsDescriptions">
           <p>
-            Here you can find more information about me, my goals, achievements,
-            licenses, among other information.
+            Here you can learn about the projects I've worked on, ranging from
+            college projects to professional ones.
           </p>
         </div>
         <div class="projectContainer">
@@ -794,7 +793,7 @@
         <div class="headingsDescriptions">
           <p>
             If you want to collaborate or hire me, send me a message through the
-            form or my social media below.
+            form below.
           </p>
         </div>
         <br />
